methods.slug.SlugSnail.scala.error
Compilation error:
SlugSnail:6: error: not found: value pickUpBaggle
      pickUpBaggle();
      ^